# mp3_audio_analyzer

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: FindMPG123.cmake  FindPortAudio.cmake
include/: analysis_constants.h  analysis_data.h  analysis_thread.h  audio_output.h  audio_pipeline.h  decoder.h  error_handling.h  fftw_wrapper.h  font_atlas.h  glfw_context.h  renderer.h  ring_buffer.h  shader_util.h  visualizer.h  window_constants.h
include/glad/: gl.h
include/stb/: stb_image.h
shaders/: bar.frag  bar.vert  text.frag  text.vert
src/: analysis_data.cpp  analysis_thread.cpp  audio_output.cpp  audio_pipeline.cpp  decoder.cpp  error_handling.cpp  fftw_wrapper.cpp  font_atlas.cpp  glfw_context.cpp  main.cpp  renderer.cpp  shader_util.cpp  visualizer.cpp
tests/: ring_buffer_test.cpp
third_party_licenses/: LICENSE.fftw  LICENSE.glfw  LICENSE.portaudio
